--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,9 @@ Suggests:
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
 Imports:
-    jsonlite
+    jsonlite,
+    curl
 Collate:
     'hacker_news.r'
